hoàn thành giao diện user 100%

--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsFragments/LvsHeader.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsFragments/LvsHeader.html
@@ -86,15 +86,12 @@
                                 </li>
                                 <li><a class="dropdown-item py-2 hover-lift" th:href="@{/LvsAdmin/LvsUsers/LvsList}"><i
                                             class="fas fa-user-circle me-3"></i>Hồ sơ</a></li>
-                                <li><a class="dropdown-item py-2 hover-lift"
-                                        th:href="@{/LvsAdmin/LvsSetting/LvsList}"><i class="fas fa-cog me-3"></i>Cài
-                                        đặt</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <!-- User Area Button -->
                                 <li><a class="dropdown-item py-2 hover-lift text-primary"
-                                        th:href="@{/LvsUser/LvsDashboard}"><i class="fas fa-home me-3"></i>Về trang
+                                        th:href="@{/LvsUser/LvsHome}"><i class="fas fa-home me-3"></i>Về trang
                                         User</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
