--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsLayout/LvsUser-layout.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsLayout/LvsUser-layout.html
@@ -68,6 +68,9 @@
     <!-- Header -->
     <div th:replace="~{LvsAreas/LvsUsers/LvsFragments/LvsHeader :: header}"></div>
 
+    <!-- Mobile Menu -->
+    <div th:replace="~{LvsAreas/LvsUsers/LvsFragments/LvsMobileMenu :: mobile-menu}"></div>
+
     <!-- Main Content with Sidebar -->
     <div class="flex">
         <!-- Sidebar Navigation -->
