--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsDetail.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsDetail.html
@@ -25,7 +25,7 @@
         <!-- Breadcrumb -->
         <div class="bg-[#1e1e1e] border-b border-[#333]">
             <div class="container mx-auto px-4 py-4 flex items-center gap-2 text-sm text-gray-400">
-                <a th:href="@{/LvsUser/LvsDashboard}" class="hover:text-[#fed700] transition">
+                <a th:href="@{/LvsUser/LvsHome}" class="hover:text-[#fed700] transition">
                     <i class="fas fa-home mr-1"></i>Home
                 </a>
                 <i class="fas fa-chevron-right text-xs"></i>
